# veristand-model-coder

./: .gitignore  README.md  coder.js  package.json
demos/: delay-definition.json  delay-impl.c  engine-definition.json  engine-impl.c  power-definition.json  power-impl.c  sine-definition.json  sine-impl.c  times-definition.json  times-impl.c
templates/: CMakeLists.txt  impl.c  model.c  model.h  ni_modelframework.c  ni_modelframework.h
